# rustic-dendrite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setenv-sample.sh
docker/: docker-compose-template.yml
docker/proxy/etc/: envoy.yaml
etc/: settings-sample.sh
notes/: client+server.md  handler-registry.md
present/src/: Greet.js
proto/: grpc_example.proto  hello_world.proto
proto/axon_server/: README.md  common.proto
src/: client.rs  lib.rs  main.rs  server.rs
src/axon_server/: mod.rs
src/axon_utils/: command_submit.rs  command_worker.rs  connection.rs  event_processor.rs  event_query.rs  handler_registry.rs  mod.rs  query_processor.rs  query_submit.rs
src/elastic_search_utils/: mod.rs
src/example_api/: mod.rs
src/example_command/: mod.rs
src/example_event/: mod.rs
src/example_query/: mod.rs
src/grpc_example/: mod.rs
