[package]
name = "rustic-dendrite"
version = "0.1.0"
authors = ["jeroen"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hello-world-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "hello-world-client"
path = "src/client.rs"

[dependencies]
env_logger = "0.7.1"
log = "0.4.11"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.3.1"
prost = "0.6"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"