[package]
name = "rustic-dendrite"
version = "0.1.0"
authors = ["jeroen"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
bytes = "0.5"
elasticsearch = "7.10.0-alpha.1"
env_logger = "0.7.1"
futures-core = "0.3.8"
futures-util = "0.3.5"
log = "0.4.11"
serde = "~1"
serde_json = "~1"
tokio = { version = "0.2", features = ["macros","time"] }
tonic = "0.3.1"
prost = "0.6"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"